--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
-/node_modules
-.env*.local
+# Node.js modules
+node_modules/
+
+# Build directories
+build/
+dist/
+
+# Log files
+*.log
+
+# Environment files
+.env
+
+# OS specific files
+.DS_Store
+
+# IDE and editor folders
+.idea/
+.vscode/
+
+# npm and yarn config files
+.npmrc
+.yarnrc
