--- a/.env.development.local
+++ b/.env.development.local
@@ -1,3 +1,4 @@
 NODE_ENV=development
 PORT=5000
 JWT_SECRET=cistESTEsTORItEvIbLeyEnIcIAnAtIcKLeaTEwaCySIMAGAwA
+DATABASE_URL=postgres://mydatabase_bd49_user:buVMJud9mHsghjWzqyDa0dQaIWrI2gR3@dpg-cqk812o8fa8c73chif3g-a:5432/mydatabase_bd49
